#2 - add headers, text, and images

--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
 	</head>
 	<body>
 		<h1>Gerholine Nakila | Web Developer Portfolio</h1>
+		<div class="container"> 
+			<section id="landing">
+				<h1>Gerholine Nakila</h1>
+				<h2>Web Developer</h2>
+				<p>Hello, I'm Nax and i love coding.</p>
+				<img src="./images/h001.jpg">
+			</section> 
+			<section id="gallery"></section>
+
+		</div>
 	</body>
 </html>
