--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 				<p>Hello, I'm Nax and i love coding.</p>
 				<img src="./images/h001.jpg">
 			</section> 
-			<section id="gallery"></section>
+			<section id="gallery">
+				  <div class="tools">
+          <h2>Languages I Speak</h2>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+        </div>
+        <div class="tools">
+          <h2>Tools I Use</h2>
+          <ul>
+            <li>Git Bash (Terminal)</li>
+            <li>Sublime Text</li>
+            <li>GitHub</li>
+            <li>Google Chrome</li>
+          </ul>
+        </div>
+			</section>
 
 		</div>
 	</body>
