#4 -add google fonts

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 	<title>Gerholine Nakila | Web Developer Portfolio </title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	</head>
 	<body>
-		<h1>Gerholine Nakila | Web Developer Portfolio</h1>
+		
 		<div class="container"> 
 			<section id="landing">
 				<h1>Gerholine Nakila</h1>
