--- a/index.html
+++ b/index.html
@@ -12,13 +12,31 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	</head>
 	<body>
-		
-		<div class="container"> 
-			<section id="landing">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#landing">Home </a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="#gallery">Gallery</a>
+      </li>
+    </ul>
+    
+  </div>
+</nav>
+		<div class="container-fluid">
+		</div>
+			<section id="landing" class="jumbotron text-center mt-3">
 				<h1>Gerholine Nakila</h1>
 				<h2>Web Developer</h2>
 				<p>Hello, I'm Nax and i love coding.</p>
-				<img src="./images/h001.jpg">
+				<img src="./images/h001.jpg" class="image-fluid">
 			</section> 
 			<section id="gallery">
 				  <div class="tools">
