--- a/index.html
+++ b/index.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>Gerholine Nakila | Web Developer Portfolio </title>
 	<!--Bootstrap CSS-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<!--Custom CSS-->
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#landing">Home </a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="#gallery">Gallery</a>
-      </li>
-    </ul>
-    
-  </div>
-</nav>
-		<div class="container-fluid">
-		</div>
-			<section id="landing" class="jumbotron text-center mt-3">
-				<h1>Gerholine Nakila</h1>
-				<h2>Web Developer</h2>
-				<p>Hello, I'm Nax and i love coding.</p>
-				<img src="./images/h001.jpg" class="image-fluid">
-			</section> 
-			<section id="gallery">
-				  <div class="tools">
-          <h2>Languages I Speak</h2>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-          </ul>
-        </div>
-        <div class="tools">
-          <h2>Tools I Use</h2>
-          <ul>
-            <li>Git Bash (Terminal)</li>
-            <li>Sublime Text</li>
-            <li>GitHub</li>
-            <li>Google Chrome</li>
-          </ul>
-        </div>
-			</section>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mx-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#landing">Home </a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#gallery">Gallery</a>
+				</li>
+			</ul>
 
 		</div>
+	</nav>
+	<div class="container-fluid">
+	<section id="landing" class="jumbotron text-center mt-3">
+		<h1>Gerholine Nakila</h1>
+		<h2>Web Developer</h2>
+		<p>Hello, I'm Nax and i love coding.</p>
+		<img src="./images/h001.jpg" class="image-fluid">
+	</section> 
+	<section id="gallery" class="text-center bg-dark mb-5">
+		<div class="tools">
+			<h2>Languages I Speak</h2>
+			<ul class="text-white">
+				<li>HTML</li>
+				<li>CSS</li>
+			</ul>
+		</div>
+		<div class="tools">
+			<h2>Tools I Use</h2>
+			<ul class="text-white">
+				<li>Git Bash (Terminal)</li>
+				<li>Sublime Text</li>
+				<li>GitHub</li>
+				<li>Google Chrome</li>
+			</ul>
+		</div>
+	</section>
 
-		<!--Bootstrap JavaScript-->
-		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-	</body>
+</div>
+
+<!--Bootstrap JavaScript-->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+</body>
 </html>
